<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.reduke.activities.posts.TextPostActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:text="@string/infoTag"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textPostTitleField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/hint_postTitle"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/textPostDescriptionField"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="10dip"
                    android:autofillHints=""
                    android:ems="150"
                    android:gravity="top"
                    android:hint="@string/hint_postDescription"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textSubredditTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:text="@string/subredditTag"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/textPostSubredditSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="10dip"
                    android:entries="@array/subreddits" />

                <Button
                    android:id="@+id/addTextPostBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorAccent"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addPost"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/deleteTextPostBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/holo_red_dark"
                    android:stateListAnimator="@null"
                    android:text="@string/button_deleteReduke"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>